--- a/UgLogging/Sources/UgLogging/main.page
+++ b/UgLogging/Sources/UgLogging/main.page
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:com.scade.sdk.view.widgets="http://scade.com/sdk/view/widgets/style" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
+<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
   <com.scade.sdk.view:Page name="main" drawing="/3">
+    <size width="414" height="896"/>
     <layout xsi:type="com.scade.sdk.layout:GridLayout"/>
     <minArea width="375" height="667"/>
     <maxArea width="375" height="667"/>
     <children xsi:type="com.scade.sdk.view:Label" name="label1" drawing="/3/@children.1/@children.0" text="Logging Demo">
-      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true"/>
-      <size width="158" height="29"/>
-      <location x="108" y="319"/>
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true">
+        <minSize width="150" height="50"/>
+      </layoutData>
+      <size width="150" height="50"/>
+      <location x="132" y="423"/>
     </children>
     <adapterClass href="http://scade.com/UgLogging#//MainPageAdapter"/>
   </com.scade.sdk.view:Page>
@@ -34,17 +37,17 @@
         <rx/>
         <ry/>
       </children>
-      <width value="375.0"/>
-      <height value="667.0"/>
+      <width value="414.0"/>
+      <height value="896.0"/>
     </children>
     <children xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}">
       <children xsi:type="svg:Group">
         <children xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0" fontSize="23" fontName="ArialMT" text="Logging Demo" alignmentBaseline="central">
           <fill xsi:type="svg_2:RGBColor" r="0.27450982" g="0.27450982" b="0.27450982"/>
           <x/>
-          <y value="14.0"/>
+          <y value="25.0"/>
         </children>
-        <matrix translateX="108.0" translateY="319.0"/>
+        <matrix translateX="132.0" translateY="423.0"/>
       </children>
     </children>
   </svg:Box>
