--- a/UgMapControl/Sources/UgMapControl/main.page
+++ b/UgMapControl/Sources/UgMapControl/main.page
@@ -1,8 +1,8 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:attributes="http://scade.com/svg/draw/attributes" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:color="http://scade.com/svg/style/color" xmlns:constraints="http://scade.com/svg/constraints" xmlns:draw="http://scade.com/svg/draw" xmlns:expr="com.scade.sdk.expr" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:native="http://scade.com/sdk/view/widgets/native" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:transform="http://scade.com/svg/transform" xmlns:widgets="http://scade.com/sdk/view/widgets">
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:attributes="http://scade.com/svg/draw/attributes" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:color="http://scade.com/svg/style/color" xmlns:constraints="http://scade.com/svg/constraints" xmlns:draw="http://scade.com/svg/draw" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:expr="com.scade.sdk.expr" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:native="http://scade.com/sdk/view/widgets/native" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:transform="http://scade.com/svg/transform" xmlns:widgets="http://scade.com/sdk/view/widgets">
   <widgets:Page name="main" drawing="/3">
     <children xsi:type="native:MapWidget" name="mapwidget1" drawing="/3/@children.1">
-      <location xsi:type="graphics:Point" y="2"/>
+      <location xsi:type="graphics:Point" y="14"/>
       <size xsi:type="graphics:Dimension" width="414" height="810"/>
       <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT" grabVerticalSpace="true">
         <minSize xsi:type="graphics:Dimension"/>
@@ -48,7 +48,7 @@
     </children>
     <children xsi:type="widgets:GridView" name="grid1" drawing="/3/@children.3">
       <minArea xsi:type="graphics:Dimension"/>
-      <location xsi:type="graphics:Point" y="815"/>
+      <location xsi:type="graphics:Point" y="838"/>
       <backgroundColor xsi:type="graphics:RGB" Red="251" Green="246" Blue="240"/>
       <children xsi:type="widgets:Button" text="Toronto" name="btnToronto" drawing="/3/@children.3/@children.1/@children.0">
         <location xsi:type="graphics:Point" x="44" y="5"/>
@@ -77,19 +77,9 @@
           <maxSize xsi:type="graphics:Dimension" width="43" height="23"/>
         </layoutData>
       </children>
-      <children xsi:type="widgets:Button" text="button" name="button1" horizontalAlignment="CENTER" drawing="/3/@children.3/@children.1/@children.3">
-        <font xsi:type="graphics:Font" fontFamily="ArialMT" size="17"/>
-        <layoutData xsi:type="layout:GridData" row="1" verticalAlignment="MIDDLE">
-          <minSize xsi:type="graphics:Dimension" width="86" height="23"/>
-          <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        </layoutData>
-        <location xsi:type="graphics:Point" x="5" y="24"/>
-        <size xsi:type="graphics:Dimension" width="86" height="23"/>
-        <contentSize xsi:type="graphics:Dimension" width="86" height="23"/>
-      </children>
       <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" columns="3" marginBottom="5" marginLeft="5" marginRight="5"/>
       <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-      <size xsi:type="graphics:Dimension" width="414" height="52"/>
+      <size xsi:type="graphics:Dimension" width="414" height="29"/>
       <layoutData xsi:type="layout:GridData" row="1" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT" heightConstraint="MATCH_PARENT">
         <minSize xsi:type="graphics:Dimension"/>
       </layoutData>
@@ -113,16 +103,6 @@
       <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
         <expression xsi:type="expr:Variable" name="size" path="w"/>
       </constraints>
-      <children xsi:type="draw:Rect">
-        <x xsi:type="attributes:Unit"/>
-        <y xsi:type="attributes:Unit"/>
-        <width xsi:type="attributes:Unit" value="100" measurement="PERCENTAGE"/>
-        <height xsi:type="attributes:Unit" value="100" measurement="PERCENTAGE"/>
-        <matrix xsi:type="transform:Matrix"/>
-        <rx xsi:type="attributes:Unit"/>
-        <ry xsi:type="attributes:Unit"/>
-        <fill xsi:type="color:RGBColor" r="0.972549" g="0.972549" b="0.972549"/>
-      </children>
       <y xsi:type="attributes:Unit"/>
       <width xsi:type="attributes:Unit" value="414"/>
       <height xsi:type="attributes:Unit" value="896"/>
@@ -131,7 +111,7 @@
       <size xsi:type="graphics:Dimension"/>
     </children>
     <children xsi:type="draw:Group">
-      <matrix xsi:type="transform:Matrix" translateY="2"/>
+      <matrix xsi:type="transform:Matrix" translateY="14"/>
       <children xsi:type="draw:Box">
         <x xsi:type="attributes:Unit"/>
         <children xsi:type="draw:Rect" strokeWidth="2">
@@ -219,16 +199,6 @@
         <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
           <expression xsi:type="expr:Variable" name="size" path="w"/>
         </constraints>
-        <children xsi:type="draw:Rect">
-          <x xsi:type="attributes:Unit"/>
-          <y xsi:type="attributes:Unit"/>
-          <width xsi:type="attributes:Unit" value="100" measurement="PERCENTAGE"/>
-          <height xsi:type="attributes:Unit" value="100" measurement="PERCENTAGE"/>
-          <matrix xsi:type="transform:Matrix"/>
-          <rx xsi:type="attributes:Unit"/>
-          <ry xsi:type="attributes:Unit"/>
-          <fill xsi:type="color:RGBColor" r="0.8" g="0.8" b="0.8"/>
-        </children>
         <y xsi:type="attributes:Unit"/>
         <width xsi:type="attributes:Unit" value="414"/>
         <height xsi:type="attributes:Unit" value="29"/>
@@ -316,7 +286,7 @@
       </children>
     </children>
     <children xsi:type="draw:Group">
-      <matrix xsi:type="transform:Matrix" translateY="815"/>
+      <matrix xsi:type="transform:Matrix" translateY="838"/>
       <children xsi:type="draw:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}
 ">
         <x xsi:type="attributes:Unit"/>
@@ -338,7 +308,7 @@
         </children>
         <y xsi:type="attributes:Unit"/>
         <width xsi:type="attributes:Unit" value="414"/>
-        <height xsi:type="attributes:Unit" value="52"/>
+        <height xsi:type="attributes:Unit" value="29"/>
         <location xsi:type="graphics:Point"/>
         <matrix xsi:type="transform:Matrix"/>
         <size xsi:type="graphics:Dimension"/>
@@ -420,32 +390,6 @@
 ">
             <x xsi:type="attributes:Unit"/>
             <y xsi:type="attributes:Unit" value="9.5"/>
-            <fill xsi:type="color:RGBColor" r="0.266667" g="0.415686" b="0.701961"/>
-            <matrix xsi:type="transform:Matrix"/>
-          </children>
-        </children>
-        <children xsi:type="draw:Group">
-          <matrix xsi:type="transform:Matrix" translateX="5" translateY="24"/>
-          <children xsi:type="draw:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}
-">
-            <x xsi:type="attributes:Unit"/>
-            <constraints xsi:type="constraints:DirectConstraint" exprStr="size.h" feature="ecore:EReference http://scade.com/svg#//draw/Box/height">
-              <expression xsi:type="expr:Variable" name="size" path="h"/>
-            </constraints>
-            <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
-              <expression xsi:type="expr:Variable" name="size" path="w"/>
-            </constraints>
-            <y xsi:type="attributes:Unit"/>
-            <width xsi:type="attributes:Unit" value="86"/>
-            <height xsi:type="attributes:Unit" value="23"/>
-            <location xsi:type="graphics:Point"/>
-            <matrix xsi:type="transform:Matrix"/>
-            <size xsi:type="graphics:Dimension"/>
-          </children>
-          <children xsi:type="draw:Text" text="button" anchor="middle" fontSize="17" fontName="ArialMT" style="normal" weight="400" decoration="none" opacity="1" strokeOpacity="1" fillOpacity="1" alignmentBaseline="central" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}
-">
-            <x xsi:type="attributes:Unit" value="43"/>
-            <y xsi:type="attributes:Unit" value="11.5"/>
             <fill xsi:type="color:RGBColor" r="0.266667" g="0.415686" b="0.701961"/>
             <matrix xsi:type="transform:Matrix"/>
           </children>
