--- a/UgAppInAppDemo/Sources/UgAppInAppDemo/main.page
+++ b/UgAppInAppDemo/Sources/UgAppInAppDemo/main.page
@@ -1,71 +1,90 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
-  <com.scade.sdk.view:Page name="main" drawing="/3">
-    <backgroundColor Red="248" Green="248" Blue="248"/>
-    <size width="414" height="896"/>
-    <layout xsi:type="com.scade.sdk.layout:AutoLayout"/>
-    <children xsi:type="com.scade.sdk.view:Label" name="lblTemperature" drawing="/3/@children.1/@children.0" text="Label1" horizontalAlignment="CENTER">
-      <layoutData xsi:type="com.scade.sdk.layout:AutoLayoutData">
-        <constraints source="/0/@children.0" sourceAnchor="CENTER_X" target="/0" targetAnchor="CENTER_X" active="true"/>
-        <constraints source="/0/@children.0" sourceAnchor="CENTER_Y" target="/0" targetAnchor="CENTER_Y" active="true"/>
-      </layoutData>
-      <size width="104" height="30"/>
-      <location x="155" y="433"/>
-      <font fontFamily="ArialMT" size="46">
-        <color Green="143" Blue="81"/>
+<?xml  version="1.0" encoding="UTF-8" standalone="no"?>
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:attributes="http://scade.com/svg/draw/attributes" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:color="http://scade.com/svg/style/color" xmlns:constraints="http://scade.com/svg/constraints" xmlns:draw="http://scade.com/svg/draw" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:expr="com.scade.sdk.expr" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:transform="http://scade.com/svg/transform" xmlns:widgets="http://scade.com/sdk/view/widgets">
+  <widgets:Page name="main" drawing="/3">
+    <minArea xsi:type="graphics:Dimension" width="414" height="896"/>
+    <location xsi:type="graphics:Point"/>
+    <backgroundColor xsi:type="graphics:RGB" Red="248" Green="248" Blue="248"/>
+    <children xsi:type="widgets:Label" text="Label1" name="lblTemperature" horizontalAlignment="CENTER" drawing="/3/@children.1/@children.0">
+      <font xsi:type="graphics:Font" fontFamily="ArialMT" size="46">
+        <color xsi:type="graphics:RGB" Green="143" Blue="81"/>
       </font>
+      <layoutData xsi:type="layout:AutoLayoutData">
+        <constraints xsi:type="layout:Constraint" sourceAnchor="CENTER_X" targetAnchor="CENTER_X" source="/0/@children.0" target="/0"/>
+        <constraints xsi:type="layout:Constraint" sourceAnchor="CENTER_Y" targetAnchor="CENTER_Y" source="/0/@children.0" target="/0"/>
+      </layoutData>
+      <location xsi:type="graphics:Point" x="155" y="433"/>
+      <size xsi:type="graphics:Dimension" width="104" height="30"/>
+      <contentSize xsi:type="graphics:Dimension" width="139" height="52"/>
     </children>
-    <adapterClass href="http://scade.com/UgAppInAppDemo#//MainPageAdapter"/>
-  </com.scade.sdk.view:Page>
-  <com.scade.sdk.data.binding:BindingModel/>
-  <com.scade.sdk.lattice.navigation:Navigation page="/0"/>
-  <svg:Box>
-    <children xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
-      <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h">
-        <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/height"/>
-        <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
-          <path>h</path>
-        </expression>
+    <layout xsi:type="layout:AutoLayout"/>
+    <maxArea xsi:type="graphics:Dimension" width="414" height="896"/>
+    <size xsi:type="graphics:Dimension" width="414" height="896"/>
+  </widgets:Page>
+  <binding:BindingModel/>
+  <navigation:Navigation page="/0"/>
+  <draw:Box>
+    <x xsi:type="attributes:Unit"/>
+    <children xsi:type="draw:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}
+">
+      <x xsi:type="attributes:Unit"/>
+      <constraints xsi:type="constraints:DirectConstraint" exprStr="size.h" feature="ecore:EReference http://scade.com/svg#//draw/Box/height">
+        <expression xsi:type="expr:Variable" name="size" path="h"/>
       </constraints>
-      <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
-        <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/width"/>
-        <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
-          <path>w</path>
-        </expression>
+      <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
+        <expression xsi:type="expr:Variable" name="size" path="w"/>
       </constraints>
-      <children xsi:type="svg:Rect">
-        <fill xsi:type="svg_2:RGBColor" r="0.972549" g="0.972549" b="0.972549"/>
-        <width value="100.0" measurement="PERCENTAGE"/>
-        <height value="100.0" measurement="PERCENTAGE"/>
+      <children xsi:type="draw:Rect">
+        <x xsi:type="attributes:Unit"/>
+        <y xsi:type="attributes:Unit"/>
+        <width xsi:type="attributes:Unit" value="100" measurement="PERCENTAGE"/>
+        <height xsi:type="attributes:Unit" value="100" measurement="PERCENTAGE"/>
+        <matrix xsi:type="transform:Matrix"/>
+        <rx xsi:type="attributes:Unit"/>
+        <ry xsi:type="attributes:Unit"/>
+        <fill xsi:type="color:RGBColor" r="0.972549" g="0.972549" b="0.972549"/>
       </children>
-      <width value="414.0"/>
-      <height value="896.0"/>
+      <y xsi:type="attributes:Unit"/>
+      <width xsi:type="attributes:Unit" value="414"/>
+      <height xsi:type="attributes:Unit" value="896"/>
+      <location xsi:type="graphics:Point"/>
+      <matrix xsi:type="transform:Matrix"/>
+      <size xsi:type="graphics:Dimension"/>
     </children>
-    <children xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}">
-      <children xsi:type="svg:Group">
-        <children xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
-          <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h">
-            <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/height"/>
-            <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
-              <path>h</path>
-            </expression>
+    <children xsi:type="draw:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}
+">
+      <matrix xsi:type="transform:Matrix"/>
+      <children xsi:type="draw:Group">
+        <matrix xsi:type="transform:Matrix" translateX="155" translateY="433"/>
+        <children xsi:type="draw:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}
+">
+          <x xsi:type="attributes:Unit"/>
+          <constraints xsi:type="constraints:DirectConstraint" exprStr="size.h" feature="ecore:EReference http://scade.com/svg#//draw/Box/height">
+            <expression xsi:type="expr:Variable" name="size" path="h"/>
           </constraints>
-          <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
-            <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/width"/>
-            <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
-              <path>w</path>
-            </expression>
+          <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
+            <expression xsi:type="expr:Variable" name="size" path="w"/>
           </constraints>
-          <width value="104.0"/>
-          <height value="30.0"/>
+          <y xsi:type="attributes:Unit"/>
+          <width xsi:type="attributes:Unit" value="104"/>
+          <height xsi:type="attributes:Unit" value="30"/>
+          <location xsi:type="graphics:Point"/>
+          <matrix xsi:type="transform:Matrix"/>
+          <size xsi:type="graphics:Dimension"/>
         </children>
-        <children xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0" fontSize="46" fontName="ArialMT" text="Label1" anchor="middle" alignmentBaseline="central">
-          <fill xsi:type="svg_2:RGBColor" g="0.56078434" b="0.31764707"/>
-          <x value="52.0"/>
-          <y value="15.0"/>
+        <children xsi:type="draw:Text" text="Label1" anchor="middle" fontSize="46" fontName="ArialMT" style="normal" weight="400" decoration="none" opacity="1" strokeOpacity="1" fillOpacity="1" alignmentBaseline="central" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}
+">
+          <x xsi:type="attributes:Unit" value="52"/>
+          <y xsi:type="attributes:Unit" value="15"/>
+          <fill xsi:type="color:RGBColor" g="0.560784" b="0.317647"/>
+          <matrix xsi:type="transform:Matrix"/>
         </children>
-        <matrix translateX="155.0" translateY="433.0"/>
       </children>
     </children>
-  </svg:Box>
+    <y xsi:type="attributes:Unit"/>
+    <width xsi:type="attributes:Unit" value="414"/>
+    <height xsi:type="attributes:Unit" value="896"/>
+    <location xsi:type="graphics:Point"/>
+    <matrix xsi:type="transform:Matrix"/>
+    <size xsi:type="graphics:Dimension"/>
+  </draw:Box>
 </xmi:XMI>
