--- a/Kyle1/Sources/Kyle1/main.page
+++ b/Kyle1/Sources/Kyle1/main.page
@@ -1,7 +1,7 @@
 <?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:attributes="http://scade.com/svg/draw/attributes" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:constraints="http://scade.com/svg/constraints" xmlns:draw="http://scade.com/svg/draw" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:expr="com.scade.sdk.expr" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:transform="http://scade.com/svg/transform" xmlns:widgets="http://scade.com/sdk/view/widgets">
-  <widgets:Page name="main" drawing="/3">
-    <children xsi:type="widgets:GridView" name="grid1" drawing="/3/@children.1/@children.0">
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
+  <widgets:Page name="main">
+    <children xsi:type="widgets:GridView" name="grid1">
       <layout xsi:type="layout:GridLayout" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
       <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
       <size xsi:type="graphics:Dimension" width="320" height="480"/>
@@ -17,60 +17,4 @@
   </widgets:Page>
   <binding:BindingModel/>
   <navigation:Navigation page="/0"/>
-  <draw:Box>
-    <x xsi:type="attributes:Unit"/>
-    <children xsi:type="draw:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}
-">
-      <x xsi:type="attributes:Unit"/>
-      <constraints xsi:type="constraints:DirectConstraint" exprStr="size.h" feature="ecore:EReference http://scade.com/svg#//draw/Box/height">
-        <expression xsi:type="expr:Variable" name="size" path="h"/>
-      </constraints>
-      <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
-        <expression xsi:type="expr:Variable" name="size" path="w"/>
-      </constraints>
-      <y xsi:type="attributes:Unit"/>
-      <width xsi:type="attributes:Unit" value="320"/>
-      <height xsi:type="attributes:Unit" value="480"/>
-      <location xsi:type="graphics:Point"/>
-      <matrix xsi:type="transform:Matrix"/>
-      <size xsi:type="graphics:Dimension"/>
-    </children>
-    <children xsi:type="draw:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}
-">
-      <matrix xsi:type="transform:Matrix"/>
-      <children xsi:type="draw:Group">
-        <matrix xsi:type="transform:Matrix"/>
-        <children xsi:type="draw:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}
-">
-          <x xsi:type="attributes:Unit"/>
-          <constraints xsi:type="constraints:DirectConstraint" exprStr="size.h" feature="ecore:EReference http://scade.com/svg#//draw/Box/height">
-            <expression xsi:type="expr:Variable" name="size" path="h"/>
-          </constraints>
-          <constraints xsi:type="constraints:DirectConstraint" exprStr="size.w" feature="ecore:EReference http://scade.com/svg#//draw/Box/width">
-            <expression xsi:type="expr:Variable" name="size" path="w"/>
-          </constraints>
-          <y xsi:type="attributes:Unit"/>
-          <width xsi:type="attributes:Unit" value="320"/>
-          <height xsi:type="attributes:Unit" value="480"/>
-          <location xsi:type="graphics:Point"/>
-          <matrix xsi:type="transform:Matrix"/>
-          <size xsi:type="graphics:Dimension"/>
-        </children>
-        <children xsi:type="draw:ScrollGroup" width="320" height="480" type="horizontal" attributes="{&quot;template-id&quot;:&quot;content&quot;}
-">
-          <matrix xsi:type="transform:Matrix"/>
-          <constraints xsi:type="constraints:ScrollSizeConstraint" exprStr="size.w size.h">
-            <width xsi:type="expr:Variable" name="size" path="w"/>
-            <height xsi:type="expr:Variable" name="size" path="h"/>
-          </constraints>
-        </children>
-      </children>
-    </children>
-    <y xsi:type="attributes:Unit"/>
-    <width xsi:type="attributes:Unit" value="320"/>
-    <height xsi:type="attributes:Unit" value="480"/>
-    <location xsi:type="graphics:Point"/>
-    <matrix xsi:type="transform:Matrix"/>
-    <size xsi:type="graphics:Dimension"/>
-  </draw:Box>
 </xmi:XMI>
