remove Binding section from pages in SimpleE app

--- a/SimplyE/Sources/SimplyE/BookDetail.page
+++ b/SimplyE/Sources/SimplyE/BookDetail.page
@@ -386,85 +386,6 @@
     <minArea width="320" height="480"/>
     <size width="320" height="480"/>
   </widgets:Page>
-  <binding:BindingModel>
-    <bindings src="/0" dst="/0/@children.2/@children.0/@children.0">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="title"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="text"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.2/@children.0/@children.1">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="author"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="text"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.2/@children.0/@children.2/@children.1">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="published"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="text"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.2/@children.0/@children.2/@children.3">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="publisher"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="text"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.2/@children.1/@children.0">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="bookImage"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="content"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.2/@children.1/@children.0">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="trueAttribute"/>
-        </srcSelector>
-        <dstSelector feature="contentPriority"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.3/@children.0">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="description2"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="text"/>
-      </root>
-    </bindings>
-    <bindings src="/0" dst="/0/@children.3/@children.1">
-      <root>
-        <srcSelector feature="adapter">
-          <next feature="book">
-            <next feature="description1"/>
-          </next>
-        </srcSelector>
-        <dstSelector feature="text"/>
-      </root>
-    </bindings>
-  </binding:BindingModel>
+  <binding:BindingModel/>
   <navigation:Navigation page="/0"/>
 </xmi:XMI>
