--- a/SimplyE/Sources/SimplyE/Login.page
+++ b/SimplyE/Sources/SimplyE/Login.page
@@ -15,5 +15,6 @@
     <minArea width="320" height="480"/>
     <size width="320" height="480"/>
   </widgets:Page>
+  <binding:BindingModel/>
   <navigation:Navigation page="/0"/>
 </xmi:XMI>
