--- a/SimplyE/Sources/SimplyE/main.page
+++ b/SimplyE/Sources/SimplyE/main.page
@@ -286,5 +286,6 @@
     <minArea width="320" height="480"/>
     <size width="320" height="480"/>
   </widgets:Page>
-    <navigation:Navigation page="/0"/>
+  <binding:BindingModel/>
+  <navigation:Navigation page="/0"/>
 </xmi:XMI>
